Modifications de ParseFeatures